Revert "Feature/upgrade to java 17 (#283)"
This reverts commit 2bbe9f3b3dc14fa5764155e63894f4cce2cf9619.